--- a/.github/workflows/aspdotnet-iis.yml
+++ b/.github/workflows/aspdotnet-iis.yml
@@ -25,7 +25,7 @@ jobs:
 
     - name: dotnet publish 
       run: |
-        dotnet publish -c Release -o dotnetcorewebapp .\dotnet-core-webapp
+        dotnet publish -c Release -o dotnetcorewebapp
 
     - name: Deploy to IIS
       run: |
