added the pipeline

--- a/.github/workflows/method1.yml
+++ b/.github/workflows/method1.yml
@@ -3,7 +3,7 @@ name: Method 1- Copy Files via SSH to Windows Server
 on:
   push:
     branches:
-      - main
+      - master
 
   workflow_dispatch:
 
